err/pyduck.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyduck'...
Compiling './lib/python3.5/site-packages/pyduck/decorators.py'...
***   File "./lib/python3.5/site-packages/pyduck/decorators.py", line 54
    raise TypeError, "%s can only decorate functions" % type(self).__name__
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyduck/method.py'...
***   File "./lib/python3.5/site-packages/pyduck/method.py", line 19
    raise ValueError, "Expected method/function, got %r" % actual_method
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyduck/overloading.py'...
***   File "./lib/python3.5/site-packages/pyduck/overloading.py", line 21
    raise ValueError, "No functions passed to overload()"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyduck/utils.py'...
***   File "./lib/python3.5/site-packages/pyduck/utils.py", line 41
    raise TypeError, "Invalid argument index or name - must be a number or ANSI string"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyduck/wrappers.py'...
***   File "./lib/python3.5/site-packages/pyduck/wrappers.py", line 23
    raise TypeError, "enforce() requires an Interface"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyduck-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
